--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^7.1.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
